--- a/src/AmtPtpDeviceUsbKm/AmtPtpDeviceUsbKm.vcxproj.filters
+++ b/src/AmtPtpDeviceUsbKm/AmtPtpDeviceUsbKm.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Trace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.c">
@@ -59,5 +62,10 @@
     <ClCompile Include="Hid.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
