USB: Wellspring 6/6a (#235), Wellspring 8 (2015, 15-inch)
2015 (15-inch) is a fallback support.

--- a/src/AmtPtpDeviceUsbUm/MagicTrackpad2PtpDevice.vcxproj
+++ b/src/AmtPtpDeviceUsbUm/MagicTrackpad2PtpDevice.vcxproj
@@ -49,6 +49,7 @@
     <ClInclude Include="AppleDefinition.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="DeviceFamily\Wellspring5.h" />
+    <ClInclude Include="DeviceFamily\Wellspring6.h" />
     <ClInclude Include="DeviceFamily\Wellspring7A.h" />
     <ClInclude Include="DeviceFamily\Wellspring8.h" />
     <ClInclude Include="DeviceFamily\WellspringMt2.h" />
