Why this value is so freaking large on T2

--- a/src/AmtPtpDeviceUsbUm/MagicTrackpad2PtpDevice.vcxproj.filters
+++ b/src/AmtPtpDeviceUsbUm/MagicTrackpad2PtpDevice.vcxproj.filters
@@ -95,4 +95,9 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Inf Include="AmtPtpDeviceUsbUm.inf">
+      <Filter>Driver Files</Filter>
+    </Inf>
+  </ItemGroup>
 </Project>
