--- a/src/AmtPtpDeviceUniversalPkg/AmtPtpDeviceUniversalPkg.vcxproj
+++ b/src/AmtPtpDeviceUniversalPkg/AmtPtpDeviceUniversalPkg.vcxproj
@@ -61,20 +61,15 @@
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
     <RootNamespace>AmtPtpDeviceUniversalPkg</RootNamespace>
   </PropertyGroup>
-  <!-- They told me this: https://help.github.com/en/articles/software-in-virtual-environments-for-github-actions#windows-server-2019 -->
-  <!-- We are still using 17134/rs4 WDK on dev and AzDevOps environment. -->
   <PropertyGroup>
     <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(BuildEnvironment)'=='Github'">
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(BuildEnvironment)'=='AzurePipelineOnPremAgent'">
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <!-- Note: AzDevOps Pipeline might override this -->
   <PropertyGroup Condition="'$(ProductionCertPath)'==''">
-    <ProductionCertPath>CN=Bingxing Wang, O=Bingxing Wang, L=Bloomington, S=Indiana, C=US | 86EEA317D906826CA6F764739A5B44770AF9A12E</ProductionCertPath>
+    <ProductionCertPath></ProductionCertPath>
     <TimeStampServer>http://timestamp.digicert.com</TimeStampServer>
     <SignMode>ProductionSign</SignMode>
   </PropertyGroup>
