Filter: initial concept to hijack Windows HID stack

--- a/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj.filters
+++ b/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj.filters
@@ -49,5 +49,8 @@
     <ClInclude Include="include\Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Hac.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
