Input: some attempt to kick it into multi-touch mode. Need to check report reads

--- a/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj
+++ b/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj
@@ -260,6 +260,7 @@
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Detour.c" />
     <ClCompile Include="Device.c" />
     <ClCompile Include="Driver.c" />
     <ClCompile Include="Queue.c" />
