--- a/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj.filters
+++ b/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Queue.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Detour.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="include\Driver.h">
