Stage read stuffs

--- a/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj
+++ b/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj
@@ -262,6 +262,7 @@
   <ItemGroup>
     <ClCompile Include="Detour.c" />
     <ClCompile Include="Device.c" />
+    <ClCompile Include="Diagnostics.c" />
     <ClCompile Include="Driver.c" />
     <ClCompile Include="Queue.c" />
   </ItemGroup>
@@ -270,6 +271,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Device.h" />
+    <ClInclude Include="include\Diagnostics.h" />
     <ClInclude Include="include\Hac.h" />
     <ClInclude Include="include\Queue.h" />
     <ClInclude Include="include\Trace.h" />
